made changes to Hotel and Room Layers, security is commented for now, need to modify exceptions and HttpResponses