@@ -4,7 +4,6 @@ import com.finalproject.hotelbookingsystem.dto.HotelDto;
 import com.finalproject.hotelbookingsystem.entity.HotelEntity;
 import com.finalproject.hotelbookingsystem.exceptions.HotelIdNotFoundException;
 import com.finalproject.hotelbookingsystem.repository.HotelRepository;
-import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -16,20 +15,21 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
-@AllArgsConstructor
 public class HotelServiceImpl implements HotelService {
     private static final Logger logger = LoggerFactory.getLogger(HotelServiceImpl.class);
-    @Autowired
     private final HotelRepository hotelRepository;
-    @Autowired
     private final ModelMapper modelMapper;
-
+    @Autowired
+    public HotelServiceImpl(HotelRepository hotelRepository, ModelMapper modelMapper) {
+        this.hotelRepository = hotelRepository;
+        this.modelMapper = modelMapper;
+    }
     @Override
-    public HotelDto getHotelById(int id) {
-        logger.info("Fetching hotel by id: {}", id);
-        Optional<HotelEntity> hotelOptional = hotelRepository.findById(id);
+    public HotelDto getHotelById(Integer hotelId) {
+        logger.info("Fetching hotel by id: {}", hotelId);
+        Optional<HotelEntity> hotelOptional = hotelRepository.findById(hotelId);
         if(hotelOptional.isEmpty()){
-            logger.warn("Hotel not found with id: {}", id);
+            logger.warn("Hotel not found with id: {}", hotelId);
             throw new HotelIdNotFoundException("Hotel Id not found");
         }
         return modelMapper.map(hotelOptional.get(), HotelDto.class);
@@ -38,11 +38,10 @@ public class HotelServiceImpl implements HotelService {
     @Override
     public List<HotelDto> getAllHotels() {
         logger.info("Fetching all hotels");
-        List<HotelDto> hotels = hotelRepository.findAll()
-        .stream()
+        return hotelRepository.findAll()
+                .stream()
                 .map(hotelEntity -> modelMapper.map(hotelEntity, HotelDto.class))
-                .collect(Collectors.toList());
-        return  hotels;
+                .toList();
     }
 
     @Override
@@ -51,15 +50,13 @@ public class HotelServiceImpl implements HotelService {
         HotelEntity savedHotelEntity = hotelRepository.save(modelMapper.map(hotelDto, HotelEntity.class));
         return modelMapper.map(savedHotelEntity, HotelDto.class);
     }
-
-
     @Override
-    public HotelDto updateHotelById(int id, HotelDto updatedHotelDto) {
+    public HotelDto updateHotelById(Integer hotelId, HotelDto updatedHotelDto) {
         logger.info("Creating hotel: {}", updatedHotelDto);
-        Optional<HotelEntity> optionalHotel = hotelRepository.findById(id);
+        Optional<HotelEntity> optionalHotel = hotelRepository.findById(hotelId);
         if (optionalHotel.isEmpty()) {
-            logger.warn("Hotel not found with id: {}", id);
-            throw new HotelIdNotFoundException("Hotel not found with id: " + id);
+            logger.warn("Hotel not found with id: {}", hotelId);
+            throw new HotelIdNotFoundException("Hotel not found with id: " + hotelId);
         }
 
         HotelEntity existingHotel = optionalHotel.get();
@@ -69,17 +66,14 @@ public class HotelServiceImpl implements HotelService {
         HotelEntity updatedHotelEntity = hotelRepository.save(existingHotel);
         return modelMapper.map(updatedHotelEntity, HotelDto.class);
     }
-
-
     @Override
-    public String deleteHotel(int id) {
-        logger.info("Deleting hotel with id: {}", id);
-       boolean result = hotelRepository.existsById(id);
-        if (result) {
-            hotelRepository.deleteById(id);
-            return "hotel with hotel id "+" "+"deleted successfully";
+    public void deleteHotel(Integer hotelId) {
+        logger.info("Deleting hotel with id: {}", hotelId);
+        if (hotelRepository.existsById(hotelId)) {
+            hotelRepository.deleteById(hotelId);
+            logger.info("Hotel deleted successfully");
         } else {
-            return "product with product id"+" "+"does not exits in db";
+            throw new HotelIdNotFoundException("Hotel ID not found");
         }
     }
 }
